@@ -4,6 +4,7 @@ import (
 	"fmt"
 	"sort"
 	"strings"
+	"sync"
 
 	"github.com/elastic/beats/libbeat/logp"
 )
@@ -44,8 +45,10 @@ type metricSetFactoryInfo struct {
 }
 
 // Register contains the factory functions for creating new Modules and new
-// MetricSets.
+// MetricSets. Registers are thread safe for concurrent usage.
 type Register struct {
+	// Lock to control concurrent read/writes
+	lock sync.RWMutex
 	// A map of module name to ModuleFactory.
 	modules map[string]ModuleFactory
 	// A map of module name to nested map of MetricSet name to metricSetFactoryInfo.
@@ -64,6 +67,9 @@ func NewRegister() *Register {
 // name is empty, factory is nil, or if a factory has already been registered
 // under the name.
 func (r *Register) AddModule(name string, factory ModuleFactory) error {
+	r.lock.Lock()
+	defer r.lock.Unlock()
+
 	if name == "" {
 		return fmt.Errorf("module name is required")
 	}
@@ -89,6 +95,9 @@ func (r *Register) AddModule(name string, factory ModuleFactory) error {
 // returned if any parameter is empty or nil or if a factory has already been
 // registered under the name.
 func (r *Register) AddMetricSet(module string, name string, factory MetricSetFactory, hostParser ...HostParser) error {
+	r.lock.Lock()
+	defer r.lock.Unlock()
+
 	if module == "" {
 		return fmt.Errorf("module name is required")
 	}
@@ -122,12 +131,18 @@ func (r *Register) AddMetricSet(module string, name string, factory MetricSetFac
 // moduleFactory returns the registered ModuleFactory associated with the
 // given name. It returns nil if no ModuleFactory is registered.
 func (r *Register) moduleFactory(name string) ModuleFactory {
+	r.lock.RLock()
+	defer r.lock.RUnlock()
+
 	return r.modules[strings.ToLower(name)]
 }
 
 // metricSetFactory returns the registered MetricSetFactory associated with the
 // given name. It returns an error if no MetricSetFactory is registered.
 func (r *Register) metricSetFactory(module, name string) (MetricSetFactory, HostParser, error) {
+	r.lock.RLock()
+	defer r.lock.RUnlock()
+
 	module = strings.ToLower(module)
 	name = strings.ToLower(name)
 
@@ -144,9 +159,43 @@ func (r *Register) metricSetFactory(module, name string) (MetricSetFactory, Host
 	return info.factory, info.hostParser, nil
 }
 
+//Modules returns the list of module names that are registered
+func (r *Register) Modules() []string {
+	r.lock.RLock()
+	defer r.lock.RUnlock()
+
+	modules := make([]string, 0, len(r.modules))
+	for module := range r.modules {
+		modules = append(modules, module)
+	}
+
+	return modules
+}
+
+//MetricSets returns the list of metricsets registered for a given module
+func (r *Register) MetricSets(module string) []string {
+	r.lock.RLock()
+	defer r.lock.RUnlock()
+
+	var metricsets []string
+
+	sets, ok := r.metricSets[module]
+	if ok {
+		metricsets = make([]string, 0, len(sets))
+		for name := range sets {
+			metricsets = append(metricsets, name)
+		}
+	}
+
+	return metricsets
+}
+
 // String return a string representation of the registered ModuleFactory's and
 // MetricSetFactory's.
-func (r Register) String() string {
+func (r *Register) String() string {
+	r.lock.RLock()
+	defer r.lock.RUnlock()
+
 	var modules []string
 	for module := range r.modules {
 		modules = append(modules, module)
